[gd_scene load_steps=8 format=3 uid="uid://bqxj8n4h5k2pm"]

[ext_resource type="Theme" uid="uid://c7s8qm3h5xwvb" path="res://assets/ui/fractured_reality_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scripts/ui/online_lobby.gd" id="2_script"]
[ext_resource type="FontFile" uid="uid://dqfmg2b8nh5d8" path="res://assets/fonts/Orbitron-Bold.ttf" id="3_font_bold"]
[ext_resource type="Shader" path="res://assets/shaders/ui_glitch.gdshader" id="4_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg"]
shader = ExtResource("4_shader")
shader_parameter/glitch_strength = 0.015
shader_parameter/scan_line_speed = 0.3
shader_parameter/scan_line_density = 800.0
shader_parameter/noise_amount = 0.008
shader_parameter/horizontal_shake = 0.003
shader_parameter/glitch_color = Color(0, 1, 1, 0.15)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_friend_entry"]
bg_color = Color(0.003922, 0.019608, 0.062745, 0.6)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 1, 1, 0.4)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_status_panel"]
bg_color = Color(0.003922, 0.019608, 0.062745, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.498039, 0, 1, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="OnlineLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_bg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Header" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font_bold")
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(0.498039, 0, 1, 1)
text = "ONLINE LOBBY"
horizontal_alignment = 1

[node name="UserInfoContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="UsernameLabel" type="Label" parent="MarginContainer/VBoxContainer/Header/UserInfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0, 1, 1, 1)
text = "Logged in as: Player"
horizontal_alignment = 1

[node name="Separator" type="Label" parent="MarginContainer/VBoxContainer/Header/UserInfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "|"

[node name="NetworkStatusLabel" type="Label" parent="MarginContainer/VBoxContainer/Header/UserInfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Network: Connecting..."
horizontal_alignment = 1

[node name="PingLabel" type="Label" parent="MarginContainer/VBoxContainer/Header/UserInfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0, 1, 1, 0.8)
text = "Ping: --ms"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="FriendsPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="FriendsTitle" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/FriendsPanel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font_bold")
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.498039, 0, 1, 1)
text = "FRIENDS"

[node name="AddFriendContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/FriendsPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AddFriendInput" type="LineEdit" parent="MarginContainer/VBoxContainer/ContentContainer/FriendsPanel/AddFriendContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Username..."
max_length = 20

[node name="AddFriendButton" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/FriendsPanel/AddFriendContainer"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
text = "ADD"

[node name="FriendsScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentContainer/FriendsPanel"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="FriendsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/FriendsPanel/FriendsScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="NoFriendsLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/FriendsPanel/FriendsScroll/FriendsList"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "No friends added yet. Add friends to play together!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ActionsPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25
alignment = 1

[node name="StatusPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/ContentContainer/ActionsPanel"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_status_panel")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ContentContainer/ActionsPanel/StatusPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/ActionsPanel/StatusPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusIcon" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ActionsPanel/StatusPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(0, 1, 1, 1)
text = "●"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ActionsPanel/StatusPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0, 1, 1, 1)
text = "Ready to play!"
horizontal_alignment = 1

[node name="ConnectionQualityLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ActionsPanel/StatusPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Connection: Excellent"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ContentContainer/ActionsPanel"]
layout_mode = 2

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/ActionsPanel"]
custom_minimum_size = Vector2(400, 85)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 32
text = "HOST GAME"

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ActionsPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Friends can join your game directly via invite"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/ContentContainer/ActionsPanel"]
layout_mode = 2

[node name="TestInfoContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/ActionsPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TestInfoLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ActionsPanel/TestInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 14
text = "⚠ WAN P2P Test Mode"
horizontal_alignment = 1

[node name="TestInfoDetail" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/ActionsPanel/TestInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Requires backend server running"
horizontal_alignment = 1

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="LogoutButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(220, 55)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 18
text = "LOGOUT"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(220, 55)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 18
text = "BACK TO MENU"
